# birdcam

./: .gitignore  CMakeLists.txt  README.md  design.md
.github/workflows/: smoke.yml
include/: Camera.h  Controller.h  DetectionEvent.h  Frame.h  ImageSaver.h  Logger.h  MotionDetector.h  Uploader.h  Utilities.h
src/: Camera.cpp  Controller.cpp  ImageSaver.cpp  Logger.cpp  MotionDetector.cpp  Uploader.cpp  Utilities.cpp  main.cpp
test/manual/: motion_detector_smoke.cpp
test/smoke/: image_saver_smoke.cpp  logger_smoke.cpp  smoke.py
